--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Mesto</title>
-    <link rel="stylesheet" href="./pages/index.css" />
+    <!--<link rel="stylesheet" href="./pages/index.css" />
     <script src="./scripts/cards.js" defer></script>
-    <script src="./scripts/index.js" defer></script>
+    <script src="./scripts/index.js" defer></script>-->
   </head>
   <body class="page">
     <div class="page__content">
