--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
               class="popup__input popup__input_type_name"
               placeholder="Жак-Ив Кусто"
               required
+              minlength="2" maxlength="40"
             />
             <input
               type="text"
@@ -57,6 +58,7 @@
               class="popup__input popup__input_type_description"
               placeholder="Исследователь океана"
               required
+              minlength="2" maxlength="200"
             />
             <button type="submit" class="button popup__button">
               Сохранить
