--- a/src/index.html
+++ b/src/index.html
@@ -42,29 +42,23 @@
         <div class="popup__content">
           <button type="button" class="popup__close"></button>
           <h3 class="popup__title">Редактировать профиль</h3>
-          <form class="popup__form" name="edit-profile" novalidate>
+          <form class="popup__form" name="edit-profile">
             <input
               type="text"
               name="name"
               class="popup__input popup__input_type_name"
               placeholder=""
               required
-              minlength="2"
-              maxlength="40"
-              pattern="^[A-Za-zА-Яа-яЁё \-]+$"
             />
-            <span class="form__input-error name-input-error"></span>
+
             <input
               type="text"
               name="description"
               class="popup__input popup__input_type_description"
               placeholder=""
               required
-              minlength="2"
-              maxlength="200"
-              pattern="^[A-Za-zА-Яа-яЁё \-]+$"
             />
-            <span class="form__input-error description-input-error"></span>
+
             <button type="submit" class="button popup__button">
               Сохранить
             </button>
@@ -82,20 +76,16 @@
               class="popup__input popup__input_type_card-name"
               placeholder="Название"
               required
-              minlength="2"
-              maxlength="30"
-              pattern="^[A-Za-zА-Яа-яЁё \-]+$"
             />
-            <span class="form__input-error place-name-input-error"></span>
+
             <input
               type="url"
               name="link"
               class="popup__input popup__input_type_url"
               placeholder="Ссылка на картинку"
               required
-              
             />
-            <span class="form__input-error link-input-error"></span>
+
             <button type="submit" class="button popup__button">
               Сохранить
             </button>
